[BUGFIX] Select boxes in collapsed inspector sections
If a inspector section is collapsed the custom selector boxes
width is set to 0px, to prevent this we add width to 100%
with !important to overwrite inline style.

Related: #47023
Reviewed-on: https://review.typo3.org/24333
Tested-by: Mr. Hudson
Tested-by: Dominique Feyer
Tested-by: Mattias Nilsson
Tested-by: Sebastian Kurfuerst
Original-Commit-Hash: 576ae57f18f9f5d155cd23ae20832013c791b3f1

--- a/TYPO3.Neos/Resources/Private/Styles/Shared/_Chosen.scss
+++ b/TYPO3.Neos/Resources/Private/Styles/Shared/_Chosen.scss
@@ -2,6 +2,7 @@
 	color: #fff;
 	line-height: $unit;
 	font-size: 14px;
+	width: 100% !important;
 
 	.chosen-single {
 		height: $unit;
@@ -103,6 +104,7 @@
 			font-size: 0;
 
 			input {
+				min-width: 0px;
 				width: 100%;
 				height: $unit;
 				border: none;
